src/test/resources/semantic/custom/reject/whileStatementFloatType.ul
void main() {
}

void foo() {
    float condition;

    while (condition) {
    }
}
